<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.signup.SignupActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:alpha="0"
        tools:alpha="100"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/signup"
        android:alpha="0"
        tools:alpha="100"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/name_hint"
        android:alpha="0"
        tools:alpha="100"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <com.example.mystoryapp.auth.MyCustomTextEditor
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:autoText="true"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/name_allert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name_allert"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/text_field_name"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/email_hint"
        android:alpha="0"
        tools:alpha="100"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_field_name"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_name2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12">
        <com.example.mystoryapp.auth.EmailTextEditor
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:autoText="true"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/email_allert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email_allert"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/text_field_name2"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name2" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/password_hint"
        android:alpha="0"
        tools:alpha="100"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_field_name2"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name2" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_name3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" >
        <com.example.mystoryapp.auth.PasswordTextEditor
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="start"
            android:autoText="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_allert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password_allert"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/text_field_name3"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name3" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:indeterminateTint="@color/purple_500"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/text_field_name3"
        app:layout_constraintStart_toStartOf="@+id/text_field_name3"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name3"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ed_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/signup"
        android:alpha="0"
        tools:alpha="100"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/text_field_name3"
        app:layout_constraintStart_toStartOf="@+id/text_field_name3"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name3" />

</androidx.constraintlayout.widget.ConstraintLayout>