<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.login.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:alpha="0"
        tools:alpha="100"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="monospace"
        android:text="@string/login"
        android:alpha="0"
        tools:alpha="100"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/email_hint"
        android:alpha="0"
        tools:alpha="100"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" >
        <com.example.mystoryapp.auth.EmailTextEditor
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:autoText="true"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email_allert_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        android:text="@string/email_allert"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/text_field_name"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/password_hint"
        android:alpha="0"
        tools:alpha="100"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_field_name"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_name2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:endIconMode="password_toggle"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_field_name"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <com.example.mystoryapp.auth.PasswordTextEditor
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:autoText="true"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_allert_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/design_default_color_error"
        android:text="@string/password_allert"
        android:visibility="gone"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/text_field_name2"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:indeterminateTint="@color/purple_500"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/text_field_name2"
        app:layout_constraintStart_toStartOf="@+id/text_field_name2"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name2"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ed_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/login"
        android:alpha="0"
        tools:alpha="100"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/text_field_name2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/text_field_name2"
        app:layout_constraintTop_toBottomOf="@+id/text_field_name2" />

</androidx.constraintlayout.widget.ConstraintLayout>